--- a/frontend/src/pages/Wallets.css
+++ b/frontend/src/pages/Wallets.css
@@ -98,7 +98,7 @@
 
 .Wallets__token-attributes {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
 	gap: 0.75rem;
 }
 
