--- a/frontend/src/components/Navigation.css
+++ b/frontend/src/components/Navigation.css
@@ -20,6 +20,7 @@
 
 	display: grid;
 	justify-items: center;
+	justify-content: center;
 	align-content: center;
 	padding: 0.5rem;
 	padding-bottom: calc(0.5rem + var(--safeInset-bottom));
