--- a/frontend/src/components/Navigation.css
+++ b/frontend/src/components/Navigation.css
@@ -11,7 +11,7 @@
 
 	display: flex;
 
-	background-color: var(--color-surface);
+	background-color: rgb(16, 23, 37, 0.95);
 	box-shadow: 0 -1px var(--color-border);
 }
 
